added new logo | added whatwedo section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				  <a class="navbar-brand" href="#"><img src="images/logo.png" alt="bootstrapwizard logo" /></a>
+				  <a class="navbar-brand" href="#"><img src="images/SMBlogo.png" alt="SimplifyMyBiz Logo" /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -91,62 +91,92 @@
 
 				<!-- fullscreen-slider -->
 				<div id="fullscreen-slider" class="carousel slide wow bounceIn showdelay4" data-ride="carousel">
-					<!-- Indicators -->
-					  <ol class="carousel-indicators">
-						<li data-target="#fullscreen-slider" data-slide-to="0" class="active"></li>
-						<li data-target="#fullscreen-slider" data-slide-to="1"></li>
-						<li data-target="#fullscreen-slider" data-slide-to="2"></li>
-					  </ol>
 
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner">
 					<div class="item active">
 						<div class="slider-caption">
 							<div class="headline">
-								<h1>Simplify My Biz</h1>
-							</div>
-							<h2>Bring your business to the Internet. </h2>
-							<div class="headline">
+								<h2>Simplify My Biz</h2>
+								<h1>Bring your business to the Internet.  </h1>
 								<h3>What we do:</h3>
 							</div>
 							<ul class="long-arrow">
 									<li>Build a beautiful website</li>
-									<li>Setup Google Email & Docs</li>
-									<li>Help with Apple Computers & iPhones</li>
-									<li>Setup a Facebook Business & Yelp Profile page</li>
-									<li>Achieve targeted SEO for Google & Bing ranking</li>
+									<li>Setup Google Email &amp; Docs</li>
+									<li>Help with Apple Computers &amp; iPhones</li>
+									<li>Setup a Facebook Business &amp; Yelp Profile page</li>
+									<li>Achieve targeted SEO for Google &amp; Bing ranking</li>
 							</ul>
+								<h3>We simplify your technology so you can focus on the work that runs your business.  </h3>
+							</div>
 						</div>
-					</div>
-					<div class="item">
-						<div class="slider-caption">
-							<i class="fa fa-life-ring"></i>
-							<h2>Full Support</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim elit hendrerit. Quisque tempus arcu vulputate metus convallis elementum. Aenean rhoncus rutrum quam ut semper.</p>
-							<a href="#" class="btn btn-custom btn-lg" data-toggle="modal" data-target="#slider-modal">Learn More</a>
 						</div>
-					</div>
-					<div class="item">
-						<div class="slider-caption">
-							<i class="fa fa-video-camera"></i>
-							<h2>Responsive Video</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper diam nec augue semper, in dignissim elit hendrerit. Quisque tempus arcu vulputate metus convallis elementum. Aenean rhoncus rutrum quam ut semper.</p>
-							<a href="#" class="btn btn-custom btn-lg" data-toggle="modal" data-target="#video-modal">Learn More</a>
-						</div>
-					</div>
-				  </div>
-
-				  <!-- Controls -->
-				  <a class="left carousel-control" href="#fullscreen-slider" role="button" data-slide="prev">
-						<!-- <span class="glyphicon glyphicon-chevron-left"></span> -->
-						<span class="fa fa-chevron-left"></span>
-				  </a>
-				  <a class="right carousel-control" href="#fullscreen-slider" role="button" data-slide="next">
-						<!-- <span class="glyphicon glyphicon-chevron-right"></span> -->
-						<span class="fa fa-chevron-right"></span>
-				  </a>
-				</div>
 				<!-- fullscreen-slider -->
+
+				<!-- Icon-box -->
+				<div id="icon-box" class="fullSection">
+					<div class="container">
+
+						<div class="section-heading">
+							<h2>Icon Features</h2>
+						</div>
+
+						<div class="row">
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInLeft showdelay2">
+									<img src="images/icon1.png" alt="icon1" />
+									<h3>Android Image</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInUp showdelay2">
+									<img src="images/icon2.png" alt="icon2" />
+									<h3>Apple Image</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInRight showdelay2">
+									<img src="images/icon3.png" alt="icon3" />
+									<h3>RSS Image</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+						</div>
+						<!-- ./row -->
+
+						<div class="row">
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInLeft showdelay2">
+									<i class="fa fa-android"></i>
+									<h3>Android Icon</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInUp showdelay2">
+									<i class="fa fa-apple"></i>
+									<h3>Apple Icon</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-4">
+								<div class="icon-box text-center wow fadeInRight showdelay2">
+									<i class="fa fa-rocket"></i>
+									<h3>Rocket Icon</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+								</div>
+							</div>
+						</div>
+						<!-- ./row -->
+
+					</div>
+
+				</div>
+				<!-- ./Icon-box -->
+
 
 				<!-- slider-modal -->
 				<div class="modal fade" id="slider-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
