changed expanded accordian to 1st meeting

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 							<div class="panel-group" id="accordion">
 								<div class="panel panel-default">
 									<div class="panel-heading">
-										<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="collapsed">
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="">
 											1st Meeting
 										</a>
 									</div>
-									<div id="collapseOne" class="panel-collapse collapse">
+									<div id="collapseOne" class="panel-collapse collapse in">
 										<div class="panel-body">
 											We learn what you want for your business on the Internet. We find out what problems we can help solve using simple technology. If you like what you hear we shake hands and start! By the end of the 1st meeting we will have a website template picked out and a rough outline of the content.
 										</div>
@@ -198,11 +198,11 @@
 								</div>
 								<div class="panel panel-default">
 									<div class="panel-heading">
-										<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="">
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapsed">
 											Third Meeting
 										</a>
 									</div>
-									<div id="collapseThree" class="panel-collapse collapse in">
+									<div id="collapseThree" class="panel-collapse collapse">
 										<div class="panel-body">
 											The final product is launched at your business with a full day of side by side training and mentoring to get you productive.
 											Every Month- We include an hour of user support each month to continually help you with website updates, new employee training or any questions you may have. We want you to continue to grow your business without any headaches from your technology.
