updated background pics for contrast

--- a/index.html
+++ b/index.html
@@ -400,8 +400,7 @@
 											<h3>Be Social</h3>
 											<ul class="social-link">
 												<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-												<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+												<li><a href="https://twitter.com/SimplifyMyBiz"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 											</ul>
 										</div>
@@ -435,7 +434,7 @@
 		<footer id="footer">
 			<div class="container">
 				<div class="text-center">
-					&copy; 2015 Simplify My Biz | Theme from Bootstrapwizard.info
+					&copy; 2015 Simplify My Biz | Fresh Theme from <a href="http://bootstrapwizard.info/" target="_blank">Bootstrapwizard.info</a>
 				</div>
 			</div>
 		</footer>
