added in images and screens

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						<div id="featured-list" class="owl-carousel  wow fadeInUp showdelay2">
 
 							<div class="featured-box item text-center">
-								<img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt="DaftenDireckt Theme of SimplifyMy.Biz">
+								<img class="img-responsive img-thumbnail" src="images/daftendirekt.png" alt="DaftenDireckt Theme of SimplifyMy.Biz">
 								<div class="featured-info">
 									<h3>DaftenDirekt</h3>
 									<a href="http://simplifymy.biz" class="btn btn-custom" target="_blank">View</a>
