removed marinas - updated portfolio

--- a/index.html
+++ b/index.html
@@ -241,24 +241,17 @@
 								</div>
 							</div>
 							<div class="featured-box item text-center">
-								<img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt="Phoenix Theme of SimplifyMy.Biz">
+								<img class="img-responsive img-thumbnail" src="images/phoenix.png" alt="Phoenix Theme of SimplifyMy.Biz">
 								<div class="featured-info">
 									<h3>Phoenix</h3>
 									<a href="http://phoenix.simplifymy.biz" class="btn btn-custom" target="_blank">View</a>
 								</div>
 							</div>
 							<div class="featured-box item text-center">
-								<img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt="">
+								<img class="img-responsive img-thumbnail" src="images/fresh.png" alt="Fresh Theme of SimplifyMy.Biz">
 								<div class="featured-info">
-									<h3>Fresh</h3>
+									<h3>Fresh (This one!)</h3>
 									<a href="http://fresh.simplifymy.biz" class="btn btn-custom" target="_blank">View</a>
-								</div>
-							</div>
-							<div class="featured-box item text-center">
-								<img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt="">
-								<div class="featured-info">
-									<h3>Alive</h3>
-									<a href="http://alive.simplifymy.biz" class="btn btn-custom" target="_blank">View</a>
 								</div>
 							</div>
 						</div>
@@ -275,21 +268,21 @@
 								<div class="row">
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/GreenTortoiseLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/GreenTortoiseSmall.png" alt="The Green Tortoise Screenshot"><div class="img_overlay"></div></a>
 											<p>The Green Tortoise Hostel</p>
 											<a href="http://greentortoise.net" target="_blank">www.greentortoise.net</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/LennArtSmilesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/LennArtSmilesSmall.png" alt="Lennart Smiles Screenshot"><div class="img_overlay"></div></a>
 											<p>Lennart Smiles Dental Lab</p>
 											<a href="http://lennartsmiles.com" target="_blank">www.lennartsmiles.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/PSMTherapyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/PSMTherapySmall.png" alt="PSM Therapy Screenshot"><div class="img_overlay"></div></a>
 											<p>PSM Therapy</p>
 											<a href="http://psmtherapy.com" target="_blank">www.psmtherapy.com</a>
 										</div>
@@ -307,21 +300,21 @@
 								<div class="row">
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/MadeInWestGermanyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/MadeInWestGermanySmall.png" alt="Made In West Germany Screenshot"><div class="img_overlay"></div></a>
 											<p>Made in West Germany</p>
 											<a href="http://madeinwestgermany.com" target="_blank">www.madeinwestgermany.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/BigBarkozSpeedShopLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/BigBarkozSpeedShopSmall.png" alt="Big Barkoz Speed Shop Screenshot"><div class="img_overlay"></div></a>
 											<p>Big Barkoz Speed Shop</p>
 											<a href="http://bigbarkozspeedshop.com" target="_blank">www.bigbarkozspeedshop.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/SandorsScribblesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/SandorsScribblesSmall.png" alt="Sandors Systems Scribbles Screenshot"><div class="img_overlay"></div></a>
 											<p>Sandors Systems Scribbles</p>
 											<a href="http://sandorsscribbl.es" target="_blank">www.sandorsscribbl.es</a>
 										</div>
