--- a/index.html
+++ b/index.html
@@ -67,17 +67,16 @@
 					<li class="page-scroll"><a href="#whatwedo">what we do</a></li>
 					<li class="page-scroll"><a href="#howwework">how we work</a></li>
 					<li class="page-scroll"><a href="#whatwehavedone">what we have done</a></li>
-					<li class="page-scroll"><a href="#happycustomers">happy customers</a></li>
 					<li class="dropdown">
 						<a href="components.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">themes <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="components.html">Daftendirekt Theme</a></li>
-							<li><a href="components.html">Fresh Theme</a></li>
-							<li><a href="components.html">Phoenix Theme</a></li>
+							<li><a href="#themes">Daftendirekt Theme</a></li>
+							<li><a href="#themes">Fresh Theme</a></li>
+							<li><a href="#themes">Phoenix Theme</a></li>
 						</ul>
 					</li>
-					</ul>
 					<li class="page-scroll"><a href="#letstalk">lets talk</a></li>
+					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
@@ -268,28 +267,28 @@
 								<div class="row">
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/GreenTortoiseLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/GreenTortoiseSmall.png" alt="The Green Tortoise Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/GreenTortoiseLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/GreenTortoiseSmall.png" alt="The Green Tortoise Screenshot"><div class="img_overlay"></div></a>
 											<p>The Green Tortoise Hostel</p>
 											<a href="http://greentortoise.net" target="_blank">www.greentortoise.net</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/LennArtSmilesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/LennArtSmilesSmall.png" alt="Lennart Smiles Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/LennArtSmilesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/LennArtSmilesSmall.png" alt="Lennart Smiles Screenshot"><div class="img_overlay"></div></a>
 											<p>Lennart Smiles Dental Lab</p>
 											<a href="http://lennartsmiles.com" target="_blank">www.lennartsmiles.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/PSMTherapyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/PSMTherapySmall.png" alt="PSM Therapy Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/PSMTherapyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/PSMTherapySmall.png" alt="PSM Therapy Screenshot"><div class="img_overlay"></div></a>
 											<p>PSM Therapy</p>
 											<a href="http://psmtherapy.com" target="_blank">www.psmtherapy.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/fulls/PSMTherapyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/PSMTherapySmall.png" alt=""><div class="img_overlay"></div></a>
 											<p>AltanCare Adult Famliy Home</p>
 											<a href="http://altancare.com" target="_blank">www.altancare.com</a>
 										</div>
@@ -300,28 +299,28 @@
 								<div class="row">
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/MadeInWestGermanyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/MadeInWestGermanySmall.png" alt="Made In West Germany Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/MadeInWestGermanyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/MadeInWestGermanySmall.png" alt="Made In West Germany Screenshot"><div class="img_overlay"></div></a>
 											<p>Made in West Germany</p>
 											<a href="http://madeinwestgermany.com" target="_blank">www.madeinwestgermany.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/BigBarkozSpeedShopLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/BigBarkozSpeedShopSmall.png" alt="Big Barkoz Speed Shop Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/BigBarkozSpeedShopLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/BigBarkozSpeedShopSmall.png" alt="Big Barkoz Speed Shop Screenshot"><div class="img_overlay"></div></a>
 											<p>Big Barkoz Speed Shop</p>
 											<a href="http://bigbarkozspeedshop.com" target="_blank">www.bigbarkozspeedshop.com</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/SandorsScribblesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/SandorsScribblesSmall.png" alt="Sandors Systems Scribbles Screenshot"><div class="img_overlay"></div></a>
+											<a href="images/fulls/SandorsScribblesLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/SandorsScribblesSmall.png" alt="Sandors Systems Scribbles Screenshot"><div class="img_overlay"></div></a>
 											<p>Sandors Systems Scribbles</p>
 											<a href="http://sandorsscribbl.es" target="_blank">www.sandorsscribbl.es</a>
 										</div>
 									</div>
 									<div class="col-md-3 col-sm-6">
 										<div class="pic wow flipInX showdelay2">
-											<a href="images/DaftenDirecktScreenShot.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/DaftenDirecktScreenShot.png" alt=""><div class="img_overlay"></div></a>
+											<a href="images/fulls/PSMTherapyLarge.png" class="gallery-item"><img class="img-responsive img-thumbnail" src="images/thumbs/PSMTherapySmall.png" alt=""><div class="img_overlay"></div></a>
 											<p>Sandors Haraunges</p>
 											<a href="http://sandorsharaung.es" target="_blank">www.sandorsharaung.es</a>
 										</div>
@@ -335,7 +334,7 @@
 						<!-- ./what we have done -->
 
 						<!-- contact -->
-						<div id="contact" class="fullSection">
+						<div id="letstalk" class="fullSection">
 							<div class="container">
 
 								<div class="section-heading">
