--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Simplify My Biz We simplify your technology so you can focus on the work that runs your business.">
 		<meta name="author" content="Simplify My Biz Chris Livermore">
 		<link rel="shortcut icon" href="img/favicon.ico">
-		<title>Simplify My Biz - Fresh Theme</title>
+		<title>Simplify My Biz</title>
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				  <a class="navbar-brand" href="#"><img src="images/SMBlogo.png" alt="SimplifyMyBiz Logo" /></a>
+				  <a class="navbar-brand" href="#"><img src="images/SMBLogo.png" alt="SimplifyMyBiz Logo" /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
